Updated the html file for 3rd time

--- a/example3.html
+++ b/example3.html
@@ -7,3 +7,9 @@ Updating this file
 <h3> This is H3 Heading </h3>
 
 <h4> This is H4 Heading </h4>
+
+Updating the file again.
+
+<h5> This is H5 Heading </h5>
+
+<h6> This is H6 Heading </h6>
